Terrafrom_practical_5/internet_gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name        = "${var.project_name}-igw"
    Environment = "dev"
    ManagedBy   = "Terraform"
  }
}
